--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Index - Restaurantly Bootstrap Template</title>
+  <title>Example Online menue</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -535,10 +535,10 @@
     
 
     <div class="container copyright text-center mt-4">
-      <p>© <span>Copyright</span> <strong class="px-1 sitename">Restaurantly</strong> <span>All Rights Reserved</span></p>
+      <p>© <span>Copyright</span> <strong class="px-1 sitename">Test Menue</strong> <span>All Rights Reserved</span></p>
       <div class="credits">
    
-        Designed by <a href="#">BootstrapMade</a>
+        Designed by <a href="#">Sniptus Solutions</a>
       </div>
     </div>
 
